--- a/Refrigerator/nixpacks.toml
+++ b/Refrigerator/nixpacks.toml
@@ -1,2 +1,1 @@
-[start]
-cmd = "gunicorn Refrigerator.wsgi:application --bind 0.0.0.0:$PORT"
+gunicorn Refrigerator.wsgi:application --bind 0.0.0.0:$PORT
